fixed code style

--- a/src/index.html
+++ b/src/index.html
@@ -22,14 +22,16 @@
         <input
           type="text"
           name="surname"
-          autocomplete="off">
+          autocomplete="off"
+        >
         <br>
 
         <label for="name">Name:</label>
         <input
           type="text"
           name="name"
-          autocomplete="off">
+          autocomplete="off"
+        >
         <br>
 
         <label for="age">How old are you?</label>
@@ -39,7 +41,8 @@
           min="1"
           max="100"
           value="12"
-          autocomplete="off">
+          autocomplete="off"
+        >
         <br>
 
         <label for="dateOfBirth">Full date of birth:</label>
@@ -50,7 +53,8 @@
         <input
           type="checkbox"
           name="termAgreement"
-          required>
+          required
+        >
       </fieldset>
 
       <fieldset class="fieldsGroup">
@@ -61,7 +65,8 @@
           type="email"
           name="email"
           placeholder="email@example.com"
-          autocomplete="off">
+          autocomplete="off"
+        >
         <br>
 
         <label for="password">Password:</label>
@@ -69,7 +74,8 @@
           name="password"
           minlength="8"
           maxlength="32"
-          autocomplete="off">
+          autocomplete="off"
+        >
       </fieldset>
 
       <fieldset class="fieldsGroup">
@@ -80,13 +86,15 @@
           type="radio"
           name="catsLover"
           id="catsLover"
-          value="yes">
+          value="yes"
+        >
         <label for="catsLover">Yes</label>
         <input
           type="radio"
           name="catsLover"
           id="notCatsLover"
-          value="no">
+          value="no"
+        >
         <label for="notCatsLover">No</label>
         <br>
 
@@ -94,7 +102,8 @@
         <input
           type="color"
           name="favColor"
-          id="favColor">
+          id="favColor"
+        >
         <br>
 
         <label for="bedTime">What time do you go to bed?</label>
@@ -106,14 +115,16 @@
           type="text"
           name="favCarBrands"
           id="favCarBrands"
-          multiple>
+          multiple
+        >
         <br>
 
         <label for="workRating">How do you rate your work?</label>
         <input
           type="range"
           name="workRating"
-          id="workRating">
+          id="workRating"
+        >
       </fieldset>
 
       <fieldset class="fieldsGroup">
@@ -125,7 +136,9 @@
           id="comments"
           cols="18"
           rows="2"
-          autocomplete="off"></textarea>
+          autocomplete="off"
+        >
+        </textarea>
         <br>
 
         <label for="recommendation-select">Would you recommend us?</label>
