updated code style

--- a/src/index.html
+++ b/src/index.html
@@ -110,18 +110,11 @@
 
         <label class="input-field">
           What is your favorite color?
-          <input
-            type="color"
-            name="favColor"
-            id="favColor"
-          >
+          <input type="color">
         </label>
         <label class="input-field">
           What time do you go to bed?
-          <input
-            type="time"
-            name="bedTime"
-          >
+          <input type="time" step="1">
         </label>
         <label class="input-field">
           What are your favorite brands of cars?
@@ -148,13 +141,7 @@
         <legend>Additional info:</legend>
         <label class="input-field">
           Comments:
-          <textarea
-            name="comments"
-            cols="18"
-            rows="2"
-            autocomplete="off"
-          >
-          </textarea>
+          <textarea name="comments" autocomplete="off"></textarea>
         </label>
         <label class="input-field">
           Would you recommend us?
