--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           >
         </label>
         <label class="input-field">
-          How old are you?
+          How old are You?
           <input
             type="number"
             name="age"
@@ -125,7 +125,7 @@
           </select>
         </label>
         <label class="input-field">
-          How do you rate your work?
+          How do you rate our work?
           <input
             type="range"
             name="workRating"
