--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,166 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+    method="post"
+    name="Personal information"
+    >
+      <fieldset>
+        <legend>Personal information</legend>
+
+        <label class="form-field">
+          Surname:
+          <input
+          type="text"
+          name="surname"
+          autocomplete="off"
+          >
+        </label>
+
+        <label class="form-field">
+          Name:
+          <input
+          type="text"
+          name="name" autocomplete="off"
+          >
+        </label>
+
+        <label class="form-field">
+          How old are You?
+          <input
+          type="number"
+          name="age"
+          min="1"
+          max="100"
+          value="12"
+          >
+        </label>
+
+        <label class="form-field">
+          Full date of birth:
+          <input
+          type="date"
+          name="date"
+          >
+        </label>
+
+        <label class="form-field">
+          I accept the term of agreement
+          <input
+          type="checkbox"
+          name="agreement"
+          >
+        </label>
+
+      </fieldset>
+
+      <fieldset>
+        <legend>Registration</legend>
+
+        <label class="form-field">
+          E-mail:
+          <input
+          type="email"
+          name="email"
+          placeholder="email@example.com"
+          required
+          >
+        </label>
+
+        <label class="form-field">
+          Password:
+          <input
+          type="password"
+          name="password"
+          minlength="4"
+          maxlength="8"
+          >
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <legend>An interesting fact about you!</legend>
+
+        <label class="form-field">
+          Do you love cats?
+          <label>
+            <input
+            type="radio"
+            name="cats"
+            value="Yes"
+            >
+            Yes
+          </label>
+          <label>
+            <input
+            type="radio"
+            name="cats"
+            value="No"
+            >
+            No
+          </label>
+        </label>
+
+        <label class="form-field">
+          What is your favorite color?
+          <input type="color" name="color">
+        </label>
+
+        <label class="form-field">
+          What time do you go to bed?
+          <input type="time" name="time">
+        </label>
+
+        <label class="form-field">
+          What are your favorite brand of cars?
+          <select name="brand" multiple>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Tesla">Tesla</option>
+          </select>
+        </label>
+
+        <label class="form-field">
+          How do you rate our work?
+          <input
+          type="range"
+          name="rate"
+          min="0"
+          max="10"
+          step="1"
+          >
+        </label>
+
+      </fieldset>
+
+      <fieldset>
+        <legend>Additional info:</legend>
+
+        <label class="form-field">
+          Comments:
+          <textarea
+          name="comments"
+          cols="30"
+          rows="2"
+          >
+          </textarea>
+        </label>
+
+        <label class="form-field">
+          Would you recommend us?
+          <select name="recommend">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+        </label>
+
+
+      </fieldset>
+
+      <button type="submit">Submit</button>
+
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
