add distance, use display block

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           >
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance" >
           Name:
           <input
           type="text"
@@ -36,7 +36,7 @@
           >
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           How old are You?
           <input
           type="number"
@@ -47,7 +47,7 @@
           >
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           Full date of birth:
           <input
           type="date"
@@ -55,7 +55,7 @@
           >
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           I accept the term of agreement
           <input
           type="checkbox"
@@ -78,7 +78,7 @@
           >
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           Password:
           <input
           type="password"
@@ -112,17 +112,17 @@
           </label>
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           What is your favorite color?
           <input type="color" name="color">
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           What time do you go to bed?
           <input type="time" name="time">
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           What are your favorite brand of cars?
           <select name="brand" multiple>
             <option value="BMW">BMW</option>
@@ -131,7 +131,7 @@
           </select>
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           How do you rate our work?
           <input
           type="range"
@@ -147,17 +147,17 @@
       <fieldset>
         <legend>Additional info:</legend>
 
-        <label class="form-field">
+        <label>
           Comments:
           <textarea
           name="comments"
-          cols="30"
+          cols="20"
           rows="2"
           >
           </textarea>
         </label>
 
-        <label class="form-field">
+        <label class="form-field distance">
           Would you recommend us?
           <select name="recommend">
             <option value="Yes">Yes</option>
