--- a/src/index.html
+++ b/src/index.html
@@ -26,37 +26,38 @@
           name="surname"
           autocomplete="off"
           >
-        </label>
+        </label><br>
 
-        <label class="form-field distance" >
+        <label class="form-field" >
           Name:
-          <input
+          <input class="distance"
           type="text"
           name="name" autocomplete="off"
           >
-        </label>
+        </label><br>
 
-        <label class="form-field distance">
+        <label class="form-field">
           How old are You?
-          <input
+          <input class="distance"
           type="number"
           name="age"
           min="1"
           max="100"
           value="12"
           >
-        </label>
+        </label><br>
 
-        <label class="form-field distance">
+        <label class="form-field ">
           Full date of birth:
           <input
+          class="distanceboth"
           type="date"
           name="date"
           >
-        </label>
+        </label><br>
 
-        <label class="form-field distance">
-          I accept the term of agreement
+        <label class="form-field">
+          I accept the term of the agreement
           <input
           type="checkbox"
           name="agreement"
@@ -65,7 +66,7 @@
 
       </fieldset>
 
-      <fieldset>
+      <fieldset class="distance2">
         <legend>Registration</legend>
 
         <label class="form-field">
@@ -76,11 +77,11 @@
           placeholder="email@example.com"
           required
           >
-        </label>
+        </label><br>
 
-        <label class="form-field distance">
+        <label class="form-field">
           Password:
-          <input
+          <input class="distance"
           type="password"
           name="password"
           minlength="4"
@@ -89,7 +90,7 @@
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="distance2">
         <legend>An interesting fact about you!</legend>
 
         <label class="form-field">
@@ -110,32 +111,45 @@
             >
             No
           </label>
-        </label>
+        </label><br>
 
-        <label class="form-field distance">
+        <label class="form-field ">
           What is your favorite color?
-          <input type="color" name="color">
-        </label>
+          <input
+          class="distance"
+          type="color"
+          name="color"
+          >
+        </label><br>
 
         <label class="form-field distance">
           What time do you go to bed?
-          <input type="time" name="time">
-        </label>
+          <input
+          class="distance"
+          type="time"
+          name="time"
+          >
+        </label><br>
 
-        <label class="form-field distance">
+        <label class="form-field">
           What are your favorite brand of cars?
-          <select name="brand" multiple>
+          <select
+          class="distanceboth"
+          name="brand"
+          multiple
+          >
             <option value="BMW">BMW</option>
             <option value="Audi">Audi</option>
-            <option value="Tesla">Tesla</option>
+            <option value="Lada">Lada</option>
           </select>
-        </label>
+        </label><br>
 
-        <label class="form-field distance">
+        <label class="form-field">
           How do you rate our work?
           <input
           type="range"
           name="rate"
+          value="0"
           min="0"
           max="10"
           step="1"
@@ -144,7 +158,7 @@
 
       </fieldset>
 
-      <fieldset>
+      <fieldset class="distance2">
         <legend>Additional info:</legend>
 
         <label>
@@ -155,20 +169,20 @@
           rows="2"
           >
           </textarea>
-        </label>
+        </label><br>
 
-        <label class="form-field distance">
+        <label class="form-field">
           Would you recommend us?
-          <select name="recommend">
-            <option value="Yes">Yes</option>
-            <option value="No">No</option>
+          <select class="distance" name="recommend">
+            <option value="Yes">yes</option>
+            <option value="No">no</option>
           </select>
         </label>
 
 
       </fieldset>
 
-      <button type="submit">Submit</button>
+      <button class="distance2" type="submit">Submit</button>
 
     </form>
     <script type="text/javascript" src="./main.js"></script>
