--- a/src/index.html
+++ b/src/index.html
@@ -17,106 +17,131 @@
       method="post"
       autocomplete="off"
     >
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Personal information</legend>
 
-        <label for="surname">Surname:</label>
-        <input
-          type="text"
-          id="surname"
-          name="surname"
-        ><br>
+        <div class="input">
+          <label for="surname">Surname:</label>
+          <input
+            type="text"
+            id="surname"
+            name="surname"
+          >
+        </div>
 
-        <label for="name">Name:</label>
-        <input
-          type="text"
-          id="name"
-          name="name"
-          required
-        ><br>
+        <div class="input">
+          <label for="name">Name:</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            required
+          >
+        </div>
 
-        <label for="old">How old are You?</label>
-        <input
-          type="number"
-          id="old"
-          value="12"
-          min="1"
-          max="100"
-        ><br>
+        <div class="input">
+          <label for="old">How old are You?</label>
+          <input
+            type="number"
+            id="old"
+            value="12"
+            min="1"
+            max="100"
+          >
+        </div>
 
-        <label for="birth">Full date of birth:</label>
-        <input
-          type="date"
-          id="birth"
-          name="birth"
-        ><br>
+        <div class="input">
+          <label for="birth">Full date of birth:</label>
+          <input
+            type="date"
+            id="birth"
+            name="birth"
+          >
+        </div>
 
-        <label for="agreement">I accept the term of the agreement</label>
-        <input
-          type="checkbox"
-          id="agreement"
-          name="agreement"
-        >
+        <div>
+          <label for="agreement">I accept the term of the agreement</label>
+          <input
+            type="checkbox"
+            id="agreement"
+            name="agreement"
+          >
+        </div>
+
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Registration</legend>
-        <label for="email" >E-mail:</label>
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="email@example.com"
-        ><br>
 
-        <label for="pass">Password:</label>
-        <input
-          type="password"
-          name="password"
-          id="pass"
-          minlength="6"
-        >
+        <div class="input">
+          <label for="email" >E-mail:</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="email@example.com"
+          >
+        </div>
+
+        <div>
+          <label for="pass">Password:</label>
+          <input
+            type="password"
+            name="password"
+            id="pass"
+            minlength="6"
+          >
+        </div>
+
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
 
-        Do you love cats?
-        <input
-          type="radio"
-          name="loveCats"
-          id="yes"
-          value="Yes"
-        >
-        <label for="yes">Yes</label>
-        <input
-          type="radio"
-          name="loveCats"
-          id="no"
-          value="No"
-        >
-        <label for="no">No</label><br>
+        <div class="input">
+          Do you love cats?
+          <input
+            type="radio"
+            name="loveCats"
+            id="yes"
+            value="Yes"
+          >
+          <label for="yes">Yes</label>
+          <input
+            type="radio"
+            name="loveCats"
+            id="no"
+            value="No"
+          >
+          <label for="no">No</label>
+        </div>
 
-        <label for="fColor">What is your favorite color?</label>
-        <input
-          type="color"
-          name="favoriteColor"
-          id="fColor"
-        ><br>
+        <div class="input">
+          <label for="fColor">What is your favorite color?</label>
+          <input
+            type="color"
+            name="favoriteColor"
+            id="fColor"
+          >
+        </div>
 
-        <label for="goBed">What time do you go to bed?</label>
-        <input
-          type="time"
-          name="goBed"
-          id="goBed"
-          step="1"
-        ><br>
+        <div class="input">
+          <label for="goBed">What time do you go to bed?</label>
+          <input
+            type="time"
+            name="goBed"
+            id="goBed"
+            step="1"
+          >
+        </div>
 
-        <div class="cont">
+
+        <div class="input">
           <label for="fCar">What are your favorite brand of cars?</label>
           <select
             name="fCar"
-            id="fCar" multiple
+            id="fCar"
+            multiple
           >
             <option value="BMW">BMW</option>
             <option value="Audi">Audi</option>
@@ -124,20 +149,23 @@
           </select>
         </div>
 
-        <label for="rateWork">How do you rate our work?</label>
-        <input
-          type="range"
-          name="rateWork"
-          id="rateWork"
-          value="0"
-        >
+        <div>
+          <label for="rateWork">How do you rate our work?</label>
+          <input
+            type="range"
+            name="rateWork"
+            id="rateWork"
+            value="0"
+          >
+        </div>
+
 
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Additional info:</legend>
 
-        <div class="cont">
+        <div class="input">
           <label for="comments" class="123">Comments</label>
           <textarea
             name="comments"
@@ -149,12 +177,14 @@
           </textarea>
         </div>
 
+        <div>
+          <label for="recommend">Would you recommend us?</label>
+          <select name="recommend" id="recommend">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+        </div>
 
-        <label for="recommend">Would you recommend us?</label>
-        <select name="recommend" id="recommend">
-          <option value="Yes">Yes</option>
-          <option value="No">No</option>
-        </select>
 
       </fieldset>
 
