--- a/src/index.html
+++ b/src/index.html
@@ -11,183 +11,150 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form 
-      action="https://mate-academy-form-lesson.herokuapp.com/create-application" 
-      method="get"
-    >
-      <fieldset>
-        <legend>
-          Personal information
-        </legend>
-        <label for="sname">
-          Surname: 
-        </label>
-        <input 
-          type="text"
-          autocomplete="off"
-          id="sname"
-        >
-        <br>
-        <label for="lname">
-          Name: 
-        </label>
-        <input 
-          type="text"
-          autocomplete="off"
-          id="lname"
-        >
-        <br>
-        <label for="age">
-          How old are You?
-        </label>
-        <input 
-          type="number" 
-          id="age"
-          min="1"
-          max="100"
-          value="12"
-        >
-        <br>
-        <label for="bday">
-          Full date of birth:
-        </label>
-        <input 
-          type="date" 
-          id="bday" 
-        >
-        <br>
-        <label for="terms">
-          I accept the term of the agreement
-        </label>
-        <input 
-          type="checkbox" 
-          id="terms"
-        >
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application">
+      <fieldset class="form-fild">
+        <legend>Personal information</legend>
+        <div class="form">
+          <label>
+            Surname:
+            <input type="text"
+              name="sname"
+              autocomplete="off"
+            >
+          </label>
+        </div>
+        <div class="form">
+          <label>
+            Name:
+            <input type="text"
+              name="fname"
+              autocomplete="off"
+            >
+          </label>
+        </div>
+        <div class="form">
+          <label>
+            How old are You?
+            <input type="number"
+              name="old"
+              min="1"
+              max="100"
+              value="12"
+            >
+          </label>
+        </div>
+        <div class="form">
+          <label>
+            Full date of birth:
+            <input type="date" name="birth">
+          </label>
+        </div>
+        <div>
+          <label>
+            I accept the term of the agreement
+            <input type="checkbox" name="accept">
+          </label>
+        </div>
       </fieldset>
-
-      <fieldset>
-        <legend>
-          Registration
-        </legend>
-        <label for="email">
-          E-mail:
-        </label>
-        <input 
-          type="email" 
-          id="email"
-          placeholder="email@example.com"
-        >
-        <br>
-        <label for="passw">
-          Password:
-        </label>
-        <input 
-          type="password" 
-          id="passw"
-          required
-        >
+      <fieldset class="form-fild">
+        <legend>Registration</legend>
+        <div class="form">
+          <label>
+            E-mail:
+            <input type="email"
+              name="maill"
+              placeholder="email@example.com"
+            >
+          </label>
+        </div>
+        <div>
+          <label>
+            Password:
+            <input type="password"
+              name="p_word"
+              minlength="4"
+              maxlength="1"
+            >
+          </label>
+        </div>
       </fieldset>
-
-      <fieldset>
-        <legend>
-          An interesting fact about you!
-        </legend>
-        <label for="loveCats" id="loveCats">
+      <fieldset class="form-fild">
+        <legend>An interesting fact about you!</legend>
+        <div class="form">
           Do you love cats?
-        </label>
-        <input 
-          id="yes"
-          type="radio" 
-          name="yes"
-        >
-        <label for="yes">
-          Yes
-        </label>
-        <input 
-          id="no"
-          type="radio" 
-          name="no"
-        >
-        <label for="no">
-          No
-        </label>
-        <br>
-        <label for="favColor">
-          What is your favorite color?
-        </label>
-        <input 
-          type="color" 
-          id="favColor"
-        >
-        <br>
-        <label for="timeToBed">
-          What time do you go to bed?
-        </label>
-        <input 
-          type="time"
-          step="2"
-          id="timeToBed"
-        >
-        <br>
-        <label for="cars" id="CARS">
-          What are your favorite brand of cars?
-        </label>
-        <select 
-          id="cars" 
-          size="4"
-        >
-          <option value="BMW">
-            BMW
-          </option>
-          <option value="Audi">
-            Audi
-          </option>
-          <option value="Lada">
-            Lada
-          </option>
-        </select>
-        <br>
-        <label for="rate">
-          How do you rate our work?
-        </label>
-        <input 
-          type="range" 
-          id="rate"
-          value="0"
-        >
+          <label>
+            <input type="radio"
+              name="cats"
+              value="Yes"
+            >Yes
+          </label>
+          <label>
+            <input type="radio"
+              name="cats"
+              value="No"
+            >No
+          </label>
+        </div>
+        <div class="form">
+          <label>
+            What is you favorite cololor
+            <input type="color" name="fcolor">
+          </label>
+        </div>
+        <div class="form">
+          <label>
+            What time do you go to bed?
+            <input type="time"
+              name="bed"
+              step="2"
+            >
+          </label>
+        </div>
+        <div class="form">
+          <label for="cars">What are your favorite brand of cars?</label>
+          <select id="cars"
+            name="cars"
+            size="4"
+            multiple
+          >
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="lad">Lada</option>
+          </select>
+        </div>
+        <div>
+          <label>
+            How do you rate out woork?
+            <input type="range"
+              name="rate"
+              value="0"
+            >
+          </label>
+        </div>
       </fieldset>
-      <fieldset>
-        <legend>
-          Additional info:
-        </legend>
-        <label for="comment" id="comment">
-          Comments:
-        </label>
-        <textarea cols="20" rows="2">
-        </textarea>
-        <br>
-        <label for="recommend">
-          Would you recommend us?
-        </label>
-        <select 
-          name="recommend" 
-          id="recommend"
-        >
-          <option value="yes">
-            yes
-          </option>
-          <option value="no">
-            no
-          </option>
-        </select>
+      <fieldset class="form-fild">
+        <legend>Additional info:</legend>
+        <div class="form">
+          <label>
+            Comments:
+            <textarea name="message" ></textarea>
+          </label>
+        </div>
+        <div>
+          <label >
+            Would you recomend us?
+            <select id="recomend">
+              <option value="Yes">Yes</option>
+              <option value="No">No</option>
+            </select>
+          </label>
+        </div>
       </fieldset>
-      <label for="btn">
-        <input 
-          type="submit" 
-          value="Submit"
-        >
-      </label>
-      
+      <div>
+        <label for="btn">
+          <input id="btn" type="submit" value="Submit">
+        </label>
+      </div>
     </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
